# AndroidUse

./: README.md  build.gradle  settings.gradle
Animator/: build.gradle
Dialog/: build.gradle
Dialog/src/main/java/com/zzq/dialog/: MainActivity.kt  SingleChoiceDialogFragment.kt
Dialog/src/main/res/layout/: activity_main.xml
Dialog/src/main/res/values/: styles.xml
KeyEvent/: build.gradle
Net/: build.gradle
Setting/: build.gradle
View/: build.gradle
View/src/customView/java/com/zzq/view/customview/: CustomViewActivity.kt
View/src/main/java/com/zzq/view/: MainActivity.kt  ViewApiActivity.kt
View/src/main/java/com/zzq/view/customview/: CustomViewActivity.kt
View/src/main/res/layout/: activity_custom_view.xml  activity_main.xml  activity_view_api.xml
View/src/main/res/values/: colors.xml
View/src/viewApi/: AndroidManifest.xml
common/: build.gradle
common/src/main/java/com/zzq/common/utils/: SharedPreferencesUtil.kt
common/src/main/res/layout/: include_toolbar.xml
common/src/main/res/values/: colors.xml
gradle/wrapper/: gradle-wrapper.properties
gradlebuild/: build.gradle
jni/: README.md  build.gradle
jni/src/androidTest/java/com/zzq/jni/: ExampleInstrumentedTest.kt
jni/src/main/: AndroidManifest.xml
jni/src/main/cpp/: CMakeLists.txt  HelloJni.cpp  JniAndHeaderFile.cpp  cipher_params_keeper.cpp  com_zzq_jni_model_JniAndHeaderFile.h  com_zzq_jni_password_CipherParamsKeeper.h  test.cpp
jni/src/main/java/com/zzq/jni/: MainActivity.java
jni/src/main/java/com/zzq/jni/model/: HelloJni.java  JniAndHeaderFile.java
jni/src/main/java/com/zzq/jni/password/: CipherParamsKeeper.java
jni/src/main/java/com/zzq/jni/utils/: CipherUtil.java
jni/src/main/res/layout/: activity_main.xml
jni/src/main/res/values/: colors.xml  themes.xml
jni/src/main/res/values-night/: themes.xml
jni/src/test/java/com/zzq/jni/: ExampleUnitTest.kt
saf/: build.gradle
test/: build.gradle
test/src/androidTest/java/com/zzq/test/: ExampleInstrumentedTest.kt
test/src/androidTest/java/com/zzq/test/utils/: SpUtilTest.java
test/src/main/: AndroidManifest.xml
test/src/main/java/com/zzq/test/: MainActivity.kt
test/src/main/java/com/zzq/test/models/: MainModel.java
test/src/main/java/com/zzq/test/utils/: ByteUtil.java  (+1 more)
test/src/main/res/values/: themes.xml
test/src/test/java/com/zzq/test/: ExampleUnitTest.kt
(+5 files in other folders)
